--- a/RegistratieCentrale/pom.xml
+++ b/RegistratieCentrale/pom.xml
@@ -95,6 +95,11 @@
             <artifactId>mongo-java-driver</artifactId>
             <version>2.12.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+            <version>5.15.3</version>
+        </dependency>
     </dependencies>
     
     <build>
