--- a/TrafficSimulator/pom.xml
+++ b/TrafficSimulator/pom.xml
@@ -13,6 +13,18 @@
 
     <dependencies>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>8.0</version>
@@ -28,5 +40,11 @@
             <artifactId>slf4j-nop</artifactId>
             <version>1.7.25</version>
         </dependency>
+        
+        <dependency> 
+            <groupId>org.apache.activemq</groupId> 
+            <artifactId>activemq-all</artifactId> 
+            <version>5.15.3</version> 
+        </dependency> 
     </dependencies>
 </project>
