--- a/RekeningrijdersApplicatie/package.json
+++ b/RekeningrijdersApplicatie/package.json
@@ -21,7 +21,11 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@fortawesome/fontawesome": "^1.1.5",
+    "@fortawesome/fontawesome-free-regular": "^5.0.10",
+    "@fortawesome/fontawesome-free-solid": "^5.0.10",
     "core-js": "^2.4.1",
+    "moment": "^2.22.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
