fixed small mistakes KMRate and Location + base for RekeningrijderAPI and PolitieAPI + Wrote all domaintests

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Simulator/target/
 RegistratieCentrale/target/
 RegistratieCentrale/nbproject/
 Rekeningadministratie_Overheid/target/
+/Rekeningadministratie_Overheid/nbproject/
