--- a/RekeningrijdersApplicatie/package.json
+++ b/RekeningrijdersApplicatie/package.json
@@ -24,6 +24,8 @@
     "@fortawesome/fontawesome": "^1.1.5",
     "@fortawesome/fontawesome-free-regular": "^5.0.10",
     "@fortawesome/fontawesome-free-solid": "^5.0.10",
+    "@ngx-translate/core": "^9.1.1",
+    "@ngx-translate/http-loader": "^2.0.1",
     "core-js": "^2.4.1",
     "moment": "^2.22.1",
     "rxjs": "^5.5.6",
