--- a/TrafficSimulator/pom.xml
+++ b/TrafficSimulator/pom.xml
@@ -25,6 +25,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.locationtech.jts</groupId>
+            <artifactId>jts-core</artifactId>
+            <version>1.15.0</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>8.0</version>
@@ -40,11 +45,10 @@
             <artifactId>slf4j-nop</artifactId>
             <version>1.7.25</version>
         </dependency>
-        
         <dependency> 
             <groupId>org.apache.activemq</groupId> 
             <artifactId>activemq-all</artifactId> 
             <version>5.15.3</version> 
-        </dependency> 
+        </dependency>
     </dependencies>
 </project>
