--- a/TrafficSimulator/pom.xml
+++ b/TrafficSimulator/pom.xml
@@ -30,6 +30,11 @@
             <version>1.15.0</version>
         </dependency>
         <dependency>
+            <groupId>org.locationtech.jts.io</groupId>
+            <artifactId>jts-io-common</artifactId>
+            <version>1.15.0</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>8.0</version>
