--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Simulator/target/
 RegistratieCentrale/target/
 /RegistratieCentrale/nbproject/
 TrafficSimulator/src/main/resources/config\.properties
+Rekeningadministratie_Frontend/node_modules/
