--- a/Rekeningadministratie_Frontend/package.json
+++ b/Rekeningadministratie_Frontend/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "core-js": "^2.4.1",
+    "moment": "^2.22.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
