--- a/Rekeningadministratie_Overheid/pom.xml
+++ b/Rekeningadministratie_Overheid/pom.xml
@@ -100,6 +100,13 @@
             <artifactId>google-maps-services</artifactId>
             <version>0.2.7</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
