--- a/Rekeningadministratie_Overheid/pom.xml
+++ b/Rekeningadministratie_Overheid/pom.xml
@@ -107,6 +107,11 @@
             <version>1.10.19</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>3.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -199,5 +204,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
