--- a/Rekeningadministratie_Overheid/pom.xml
+++ b/Rekeningadministratie_Overheid/pom.xml
@@ -16,6 +16,11 @@
     
     <dependencies>
         <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180130</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>8.0</version>
@@ -59,7 +64,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-json-provider</artifactId>
-            <version>2.2.3</version>
+            <version>2.9.5</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey</groupId>
@@ -112,6 +117,7 @@
             <artifactId>rest-assured</artifactId>
             <version>3.1.0</version>
         </dependency>
+        
     </dependencies>
 
     <build>
