CorsFilter Critical Bug from SonarQube: Add a validation filter to this "web.xml"

--- a/RegistratieCentrale/pom.xml
+++ b/RegistratieCentrale/pom.xml
@@ -100,6 +100,11 @@
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-all</artifactId>
             <version>5.15.3</version>
+        </dependency>        
+        <dependency>
+            <groupId>org.ebaysf.web</groupId>
+            <artifactId>cors-filter</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
     
