PolyService to check if entering or leaving poland. Websocket changed. subscribe through /websocket/{uuid} = authenticationCode Vehicle. Will only send if vehicle is stolen.

--- a/RegistratieCentrale/pom.xml
+++ b/RegistratieCentrale/pom.xml
@@ -106,6 +106,21 @@
             <artifactId>cors-filter</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.locationtech.jts</groupId>
+            <artifactId>jts-core</artifactId>
+            <version>1.15.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.locationtech.jts.io</groupId>
+            <artifactId>jts-io-common</artifactId>
+            <version>1.15.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.maps</groupId>
+            <artifactId>google-maps-services</artifactId>
+            <version>0.2.7</version>
+        </dependency>
     </dependencies>
     
     <build>
